# ai_doc_processing

./: .gitignore  Makefile  README.md  SECURITY.md  db_schema.sql  package-lock.json  package.json  server.js
app/: db.server.js  document.server.js  project.server.js  root.jsx
app/ai/: main.py  pyproject.toml
app/components/: AnalysisResults.jsx  DocumentList.jsx  DocumentManagement.jsx  TagConfiguration.jsx  TagsInput.jsx
app/hooks/: useAnalysisConfig.js
app/routes/: _index.jsx  api.documents.jsx  projects.$id.jsx  projects.jsx
app/utils/: constants.js  precisionCalculations.js  validation.js
