[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.23.0",
    "instructor>=1.9.0",
    "jsonref>=1.1.0",
    "logfire>=3.21.1",
    "openai>=1.91.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
]
